# mot-30-days-ai-in-testing

./: README.md  pyproject.toml  temp.py
walkthrough/: walkthrough-1-running-local-llms.ipynb  walkthrough-2-detecting-similarity.ipynb  walkthrough-2-interacting-with-llms.ipynb  walkthrough-3-chatting-with-your-docs.ipynb  walkthrough-4-fine-tuning-models.ipynb
